--- a/index.html
+++ b/index.html
@@ -16,25 +16,28 @@
   </style>
 </head>
 <body>
-<main class="main-container">
-  <section class="card-container">
-    <article class="card-img"></article>
-    
-    <article class="card-information">
-      <button  class="button">Learning</button>
-      <p>Published 21 Dec 2023</p>
-      <h1>HTML & CSS foundations</h1>
-      <p class="description">  These languages are the backbone of every website, defining structure, content, and presentation.</p>
-      <div class="perfil-name">
-        <img src="./assets/images/image-avatar.webp" alt="profile picture">
-        <a href="">Greg Hooper</a>
-      </div>
-    </article>
-  </section>
-</main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Jair Osorio</a>.
-  </div>
+  <main class="main-container">
+    <section class="card-container">
+      <article class="card-img"></article>
+      
+      <article class="card-information">
+        <button  class="button">Learning</button>
+        <p>Published 21 Dec 2023</p>
+        <h1>HTML & CSS foundations</h1>
+        <p class="description">  These languages are the backbone of every website, defining structure, content, and presentation.</p>
+        <div class="perfil-name">
+          <img src="./assets/images/image-avatar.webp" alt="profile picture">
+          <a href="">Greg Hooper</a>
+        </div>
+      </article>
+    </section>
+  </main>
+  
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Jair Osorio</a>.
+    </div>
+  </footer>
 </body>
 </html>
